# hiresignal

./: .env.example  .gitignore  DEMO.md  Dockerfile  QUICKSTART.md  README.md  VIDEO_SCRIPT.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: __init__.py  cli.py  main.py
app/api/: graph_auth.py  graph_notifications.py  teams.py
app/core/: config.py
app/models/: __init__.py  attachments.py  audit.py  documents.py  graph.py  notifications.py  rubric.py  scoring.py
app/pipeline/: __init__.py  attachments.py  extraction.py  ingestion.py  privacy.py  rubric.py  scoring.py
app/services/: __init__.py  audit_repository.py  audit_retention.py  fabric_lakehouse.py  foundry_scoring.py  graph_auth.py  graph_client.py  manual_review.py  pii_redaction.py  teams_client.py
config/: job_rubric.sample.json
docs/: pii-compliance.md  secrets.md
scripts/: demo-walkthrough.sh  demo.sh
tests/: test_audit_repository.py  test_config.py  test_e2e.py  test_extraction.py  test_graph_auth.py  test_graph_client.py  test_graph_notifications.py  test_ingestion.py  test_pii_compliance.py  test_pipeline_privacy.py  test_rubric.py  test_scoring.py  test_teams.py
