[project]
name = "hiresignal"
version = "0.1.0"
description = "Teams-native Microsoft 365 Copilot agent for CV intake, scoring, and recruiter shortlists."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "msal>=1.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "tenacity>=8.5.0",
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]

[[tool.mypy.overrides]]
module = ["fitz", "msal"]
ignore_missing_imports = true
